<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">No items are currently in the store.</string>
    <string name="empty_view_subtitle_text">Try to add an item</string>
    <string name="empty_store">Empty Store Image</string>
    <string name="item_pic">Item Picture</string>
    <string name="variation">Insert variation for quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="product">Product:&#160;</string>
    <string name="description">Description:&#160;</string>
    <string name="dollars">Price:&#160;$</string>
    <string name="available">&#160;available</string>
    <string name="supplier">Supplier:&#160;</string>
    <string name="supplier_email">Supplier email:&#160;</string>
    <string name="order_from_supplier">Order from supplier</string>
    <string name="new_order">New Order</string>
    <string name="order_text_one">Dear&#160;</string>
    <string name="order_text_two">we would like to order 20 more&#160;</string>
    <string name="order_text_three">Thank you in advance.</string>
    <string name="editor_activity_title_new_item">Add New Item</string>
    <string name="detail_activity_title">Item Details</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_description">Description</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_price">Price</string>
    <string name="hint_item_supplier_name">Supplier</string>
    <string name="hint_item_supplier_email">Supplier Email</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="insert_item_successful">Item saved</string>
    <string name="insert_item_failed">Error with saving item</string>
    <string name="please_fill_in">Please fill in all fields</string>
    <string name="update_item_successful">Item updated</string>
    <string name="update_item_failed">Error with updating item</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_successful">Item deleted</string>
    <string name="delete_item_failed">Error with deleting item</string>
    <string name="sale">Sale</string>
    <string name="zero_quantity">No more items available.</string>
    <string name="wrong_quantity">Quantity cannot be less than 1.</string>
</resources>