<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/detail_picture"
            style="@style/image_detail"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/item_pic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_title_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product" />

            <TextView
                android:id="@+id/detail_name"
                style="@style/text_title_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_title_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description" />

            <TextView
                android:id="@+id/detail_description"
                style="@style/text_title_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_title_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dollars" />

            <TextView
                android:id="@+id/detail_price"
                style="@style/text_title_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <EditText
            android:id="@+id/variation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/variation"
            android:inputType="number"
            android:paddingTop="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/minus_button"
                style="@style/general_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/detail_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:id="@+id/plus_button"
                style="@style/general_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_title_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/supplier" />

            <TextView
                android:id="@+id/detail_supplier_name"
                style="@style/text_title_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/text_title_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/supplier_email" />

            <TextView
                android:id="@+id/detail_supplier_email"
                style="@style/text_title_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <Button
            android:id="@+id/order_more"
            style="@style/detail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_from_supplier" />

        <Button
            android:id="@+id/delete_item"
            style="@style/detail_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_item" />

    </LinearLayout>
</ScrollView>