<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linear_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        style="@style/linear_inside"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3">


        <TextView
            android:id="@+id/name"
            style="@style/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollars" />

            <TextView
                android:id="@+id/price"
                style="@style/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quantity"
                style="@style/text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants">

        <Button
            android:id="@+id/sale_button"
            style="@style/general_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:text="@string/sale" />

    </LinearLayout>

</LinearLayout>